wip deprecating old anim controller